--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm client:install && npm client:build",
     "start": "node dist/index.js",
     "dev": "nodemon ./server/index.ts",
     "lint": "eslint server/**/*.ts",
     "format": "eslint server/**/*.ts --fix",
     "client:install": "cd client && yarn",
     "client:dev": "cd client && yarn start",
-    "build:client": "cd client && yarn build",
+    "client:build": "cd client && yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhonatan Villanueva",
