--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc && npm client:install && npm client:build",
+    "build": "tsc && yarn run client:install && yarn run client:build",
     "start": "node dist/index.js",
     "dev": "nodemon ./server/index.ts",
     "lint": "eslint server/**/*.ts",
