--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017/react-phone"
+#DATABASE_URL="mongodb://localhost:27017/react-phone"
+DATABASE_URL="mongodb+srv://super:Control*123@cluster0.ghx5qfj.mongodb.net/test?retryWrites=true&w=majority"
 #NODE_ENV=development
