--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc && yarn run client:install && yarn run client:build",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon ./server/index.ts",
     "lint": "eslint server/**/*.ts",
     "format": "eslint server/**/*.ts --fix",
+    "db:init": "npx prisma generate",
     "client:install": "cd client && yarn",
     "client:dev": "cd client && yarn start",
     "client:build": "cd client && yarn build",
+    "postinstall": "yarn run build && yarn run client:install && yarn run client:build && yarn run db:init",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhonatan Villanueva",
