--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && yarn run db:init",
     "start": "node dist/index.js",
     "dev": "nodemon ./server/index.ts",
     "lint": "eslint server/**/*.ts",
@@ -45,7 +45,7 @@
     "client:install": "cd client && yarn",
     "client:dev": "cd client && yarn start",
     "client:build": "cd client && yarn build",
-    "heroku-postbuild": "cd client && yarn install && yarn run build && yarn db:init",
+    "heroku-postbuild": "cd client && yarn install && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
