--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "heroku-postbuild": "cd client && yarn install && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "heroku-run-build-script": true,
   "engines": {
     "node": "14.17.2"
   },
