--- a/package.json
+++ b/package.json
@@ -36,19 +36,16 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc && yarn run db:init",
+    "build": "tsc && yarn run db:init && yarn run client:build",
     "start": "node dist/index.js",
     "dev": "nodemon ./server/index.ts",
     "lint": "eslint server/**/*.ts",
     "format": "eslint server/**/*.ts --fix",
     "db:init": "npx prisma generate",
-    "client:install": "cd client && yarn",
     "client:dev": "cd client && yarn start",
-    "client:build": "cd client && yarn build",
-    "heroku-postbuild": "cd client && yarn install && yarn run build",
+    "client:build": "cd client && yarn && yarn build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "heroku-run-build-script": true,
   "engines": {
     "node": "14.17.2"
   },
